Embedded scrollbar fixes

--- a/common/static/style.css
+++ b/common/static/style.css
@@ -28,6 +28,14 @@ html, body {
     height: 100%;
 }
 
+/* Hide scrollbars while keeping touch/wheel scrolling when embedded in an iframe */
+.embedded * {
+    scrollbar-width: none;
+}
+.embedded *::-webkit-scrollbar {
+    display: none;
+}
+
 header {
     display: flex;
     overflow: hidden;
